# advent-of-code-2021

./: .flake8  .gitignore  .pre-commit-config.yaml  2021-12-01.py  2021-12-02.py  README.md  mypy.ini  pyproject.toml
advent_of_code/: __init__.py  __main__.py  util.py
advent_of_code/2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  16.py
advent_of_code/year_2015/: day_01.py  day_05.py
advent_of_code/year_2021/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py
advent_of_code_2021/: day_03.py  day_09.py  day_17.py  day_22.py  util.py
aoc2021/: __main__.py  day_02.py  day_04.py  day_06.py  day_25.py
tests/: test_solutions.py
